Remove parameter -J--add-opens=java.base/java.lang=ALL-UNNAMED